<resources>
    <string name="app_name">MAGIC BOOK</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_hint">Ingrese correo electronico</string>
    <string name="hint_password">Ingrese la contraseña</string>
    <string name="forgot">¿Olvidate tu contraseña?</string>
    <string name="login_text_button">INGRESAR</string>
    <string name="no_account_label">¿No tienes cuenta?</string>
    <string name="register_account">Registrate</string>
    <string name="singUp_fullname">Nombre Completo</string>
    <string name="singUp_documento">Numero de documento</string>
    <string name="singUp_correo">Correo electronico</string>
    <string name="singUp_contraseña">Contraseña</string>
    <string name="singUp_text_button">REGISTRAR</string>
    <string name="forgotPassword_button">RECUPERAR CONTRASEÑA</string>
    <string name="email_error">Email no valido</string>
    <string name="contrasena_error">Contraseña debe ser mayor a 8 caracteres</string>
    <string name="name_error">Nombre es obligatorio</string>
    <string name="documento_error">Documento errado</string>
    <string name="menu_home">Inicio</string>
    <string name="menu_locations">Sedes</string>
    <string name="menu_search">Perfil</string>
    <string name="menu_writers">Escritores</string>
    <string name="home_label_title">Cada libro encierra un tesoro</string>
    <string name="home_subtitle">Si quieres aventura, lánzate a la lectura</string>
    <string name="home_generos_label">Nuestros Generos Literarios</string>
    <string name="writers_label">Nuestros Generos Literarios</string>
    <string name="writers_subtitle">Descubre maravillosas historias detras de cada genero</string>
</resources>