<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".LoginFragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/login_fragment_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        app:cardElevation="@dimen/card_elevation">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_fragment_email_layout"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/email_hint">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/login_input_email"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/login_fragment_password_layout"
             app:layout_constraintTop_toBottomOf="@id/login_fragment_email_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:hint="@string/hint_password"
             android:layout_marginTop="@dimen/small_margin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_input_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                />

         </com.google.android.material.textfield.TextInputLayout>




            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/login_fragment_password_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="@dimen/default_margin"
                android:text="@string/login_text_button"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fragment_forgot_password"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintTop_toBottomOf="@id/login_button"
                android:layout_marginTop="@dimen/small_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/forgot"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    
    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragment_label_account_singup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account_label"
        app:layout_constraintTop_toBottomOf="@id/login_fragment_card"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/espacio_card"
        android:textColor="@color/white"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/registro_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/fragment_label_account_singup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:text="@string/register_account"
        />






</androidx.constraintlayout.widget.ConstraintLayout>
